# parser

./: .gitattributes  .gitignore  CMakeLists.txt  Parser.cc  Parser.h  Parser_test.cc  README.md  _TODO.txt  foo.h  parser.cc  parser.h  run.cc  run_test.cc
sample_files/: limerick_crlf_utf16be_bom.txt  limerick_crlf_utf16le_bom.txt  limerick_crlf_utf8bom.txt  limerick_lf_utf8.txt
sample_files.bak/: limerick_crlf_utf8.txt  orig.txt
